UHG_Dev/src/objects/Patients__c.object
<CustomObject>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Patients Trial</label>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Patients Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients Trial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>